Remove proxy network, rename slirp interface into proxy interface. Create vm-proxy example
