# api/openapi-spec/swagger.json
@@ -3620,13 +3620,13 @@
       "description": "Logical name of the interface as well as a reference to the associated networks\nMust match the Name of a Network",
       "type": "string"
      },
-     "slirp": {
-      "$ref": "#/definitions/v1.InterfaceSlirp"
+     "proxy": {
+      "$ref": "#/definitions/v1.InterfaceProxy"
      }
     }
    },
    "v1.InterfaceBridge": {},
-   "v1.InterfaceSlirp": {
+   "v1.InterfaceProxy": {
     "properties": {
      "Ports": {
       "description": "List of ports to be forwarded to the virtual machine",
@@ -3746,9 +3746,6 @@
      },
      "pod": {
       "$ref": "#/definitions/v1.PodNetwork"
-     },
-     "proxy": {
-      "$ref": "#/definitions/v1.ProxyNetwork"
      }
     }
    },
@@ -4081,14 +4078,24 @@
     }
    },
    "v1.PodNetwork": {
-    "description": "Represents the stock pod network interface"
+    "description": "Represents the stock pod network interface",
+    "properties": {
+     "vmNetworkCIDR": {
+      "description": "CIDR for vm network\nDefault 10.0.2.0/24 if not specified",
+      "type": "string"
+     }
+    }
    },
    "v1.Port": {
-    "description": "Port repesents a port to expose from the virtual machine\nDefault protocol TCP\nDefault podPort as VMPort",
+    "description": "Port repesents a port to expose from the virtual machine\nDefault protocol TCP\nDefault vmPort is PodPort",
     "required": [
-     "vmPort"
+     "name",
+     "podPort"
     ],
     "properties": {
+     "name": {
+      "type": "string"
+     },
      "podPort": {
       "type": "integer",
       "format": "int32"
@@ -4126,15 +4133,6 @@
       "description": "Weight associated with matching the corresponding nodeSelectorTerm, in the range 1-100.",
       "type": "integer",
       "format": "int32"
-     }
-    }
-   },
-   "v1.ProxyNetwork": {
-    "description": "Represents proxy connection for virtual machine",
-    "properties": {
-     "vmNetworkCIDR": {
-      "description": "CIDR for vm network\nDefault 10.0.2.0/24 if not specified",
-      "type": "string"
      }
     }
    },
