# pkg/api/v1/deepcopy_generated.go
@@ -800,12 +800,12 @@ func (in *InterfaceBindingMethod) DeepCopyInto(out *InterfaceBindingMethod) {
 			**out = **in
 		}
 	}
-	if in.Slirp != nil {
-		in, out := &in.Slirp, &out.Slirp
+	if in.Proxy != nil {
+		in, out := &in.Proxy, &out.Proxy
 		if *in == nil {
 			*out = nil
 		} else {
-			*out = new(InterfaceSlirp)
+			*out = new(InterfaceProxy)
 			(*in).DeepCopyInto(*out)
 		}
 	}
@@ -839,7 +839,7 @@ func (in *InterfaceBridge) DeepCopy() *InterfaceBridge {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *InterfaceSlirp) DeepCopyInto(out *InterfaceSlirp) {
+func (in *InterfaceProxy) DeepCopyInto(out *InterfaceProxy) {
 	*out = *in
 	if in.Ports != nil {
 		in, out := &in.Ports, &out.Ports
@@ -849,12 +849,12 @@ func (in *InterfaceSlirp) DeepCopyInto(out *InterfaceSlirp) {
 	return
 }
 
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new InterfaceSlirp.
-func (in *InterfaceSlirp) DeepCopy() *InterfaceSlirp {
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new InterfaceProxy.
+func (in *InterfaceProxy) DeepCopy() *InterfaceProxy {
 	if in == nil {
 		return nil
 	}
-	out := new(InterfaceSlirp)
+	out := new(InterfaceProxy)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -942,15 +942,6 @@ func (in *NetworkSource) DeepCopyInto(out *NetworkSource) {
 			*out = nil
 		} else {
 			*out = new(PodNetwork)
-			**out = **in
-		}
-	}
-	if in.Proxy != nil {
-		in, out := &in.Proxy, &out.Proxy
-		if *in == nil {
-			*out = nil
-		} else {
-			*out = new(ProxyNetwork)
 			**out = **in
 		}
 	}
@@ -1149,22 +1140,6 @@ func (in *Port) DeepCopy() *Port {
 		return nil
 	}
 	out := new(Port)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *ProxyNetwork) DeepCopyInto(out *ProxyNetwork) {
-	*out = *in
-	return
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ProxyNetwork.
-func (in *ProxyNetwork) DeepCopy() *ProxyNetwork {
-	if in == nil {
-		return nil
-	}
-	out := new(ProxyNetwork)
 	in.DeepCopyInto(out)
 	return out
 }
