# pkg/api/v1/openapi_generated.go
@@ -720,9 +720,9 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge"),
 							},
 						},
-						"slirp": {
+						"proxy": {
 							SchemaProps: spec.SchemaProps{
-								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceSlirp"),
+								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceProxy"),
 							},
 						},
 					},
@@ -730,7 +730,7 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 				},
 			},
 			Dependencies: []string{
-				"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge", "kubevirt.io/kubevirt/pkg/api/v1.InterfaceSlirp"},
+				"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge", "kubevirt.io/kubevirt/pkg/api/v1.InterfaceProxy"},
 		},
 		"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBindingMethod": {
 			Schema: spec.Schema{
@@ -742,16 +742,16 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge"),
 							},
 						},
-						"slirp": {
+						"proxy": {
 							SchemaProps: spec.SchemaProps{
-								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceSlirp"),
+								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.InterfaceProxy"),
 							},
 						},
 					},
 				},
 			},
 			Dependencies: []string{
-				"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge", "kubevirt.io/kubevirt/pkg/api/v1.InterfaceSlirp"},
+				"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge", "kubevirt.io/kubevirt/pkg/api/v1.InterfaceProxy"},
 		},
 		"kubevirt.io/kubevirt/pkg/api/v1.InterfaceBridge": {
 			Schema: spec.Schema{
@@ -761,7 +761,7 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 			},
 			Dependencies: []string{},
 		},
-		"kubevirt.io/kubevirt/pkg/api/v1.InterfaceSlirp": {
+		"kubevirt.io/kubevirt/pkg/api/v1.InterfaceProxy": {
 			Schema: spec.Schema{
 				SchemaProps: spec.SchemaProps{
 					Properties: map[string]spec.Schema{},
@@ -842,17 +842,12 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.PodNetwork"),
 							},
 						},
-						"proxy": {
-							SchemaProps: spec.SchemaProps{
-								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.ProxyNetwork"),
-							},
-						},
 					},
 					Required: []string{"name"},
 				},
 			},
 			Dependencies: []string{
-				"kubevirt.io/kubevirt/pkg/api/v1.PodNetwork", "kubevirt.io/kubevirt/pkg/api/v1.ProxyNetwork"},
+				"kubevirt.io/kubevirt/pkg/api/v1.PodNetwork"},
 		},
 		"kubevirt.io/kubevirt/pkg/api/v1.NetworkSource": {
 			Schema: spec.Schema{
@@ -864,16 +859,11 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.PodNetwork"),
 							},
 						},
-						"proxy": {
-							SchemaProps: spec.SchemaProps{
-								Ref: ref("kubevirt.io/kubevirt/pkg/api/v1.ProxyNetwork"),
-							},
-						},
 					},
 				},
 			},
 			Dependencies: []string{
-				"kubevirt.io/kubevirt/pkg/api/v1.PodNetwork", "kubevirt.io/kubevirt/pkg/api/v1.ProxyNetwork"},
+				"kubevirt.io/kubevirt/pkg/api/v1.PodNetwork"},
 		},
 		"kubevirt.io/kubevirt/pkg/api/v1.OfflineVirtualMachine": {
 			Schema: spec.Schema{
@@ -1097,7 +1087,15 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 			Schema: spec.Schema{
 				SchemaProps: spec.SchemaProps{
 					Description: "Represents the stock pod network interface",
-					Properties:  map[string]spec.Schema{},
+					Properties: map[string]spec.Schema{
+						"vmNetworkCIDR": {
+							SchemaProps: spec.SchemaProps{
+								Description: "CIDR for vm network Default 10.0.2.0/24 if not specified",
+								Type:        []string{"string"},
+								Format:      "",
+							},
+						},
+					},
 				},
 			},
 			Dependencies: []string{},
@@ -1105,8 +1103,14 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 		"kubevirt.io/kubevirt/pkg/api/v1.Port": {
 			Schema: spec.Schema{
 				SchemaProps: spec.SchemaProps{
-					Description: "Port repesents a port to expose from the virtual machine Default protocol TCP Default podPort as VMPort",
+					Description: "Port repesents a port to expose from the virtual machine Default protocol TCP Default vmPort is PodPort",
 					Properties: map[string]spec.Schema{
+						"name": {
+							SchemaProps: spec.SchemaProps{
+								Type:   []string{"string"},
+								Format: "",
+							},
+						},
 						"protocol": {
 							SchemaProps: spec.SchemaProps{
 								Type:   []string{"string"},
@@ -1126,24 +1130,7 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 							},
 						},
 					},
-					Required: []string{"vmPort"},
-				},
-			},
-			Dependencies: []string{},
-		},
-		"kubevirt.io/kubevirt/pkg/api/v1.ProxyNetwork": {
-			Schema: spec.Schema{
-				SchemaProps: spec.SchemaProps{
-					Description: "Represents proxy connection for virtual machine",
-					Properties: map[string]spec.Schema{
-						"vmNetworkCIDR": {
-							SchemaProps: spec.SchemaProps{
-								Description: "CIDR for vm network Default 10.0.2.0/24 if not specified",
-								Type:        []string{"string"},
-								Format:      "",
-							},
-						},
-					},
+					Required: []string{"name", "podPort"},
 				},
 			},
 			Dependencies: []string{},
