# pkg/virt-api/validating-webhook/validating-webhook.go
@@ -433,23 +433,14 @@ func validateVirtualMachineSpec(field *k8sfield.Path, spec *v1.VirtualMachineSpe
 					Message: fmt.Sprintf("Bridge interface only implemented with pod network"),
 					Field:   field.Child("domain", "devices", "interfaces").Index(idx).Child("name").String(),
 				})
-			} else if iface.Slirp != nil && networkData.Proxy == nil {
+			} else if iface.Proxy != nil && networkData.Pod == nil {
 				causes = append(causes, metav1.StatusCause{
 					Type:    metav1.CauseTypeFieldValueInvalid,
-					Message: fmt.Sprintf("Slirp interface only implemented with proxy network"),
+					Message: fmt.Sprintf("Proxy interface only implemented with pod network"),
 					Field:   field.Child("domain", "devices", "interfaces").Index(idx).Child("name").String(),
 				})
 			}
 		}
-
-		// verify that pod network is selected
-		// if spec.Networks[0].Pod == nil {
-		// 	causes = append(causes, metav1.StatusCause{
-		// 		Type:    metav1.CauseTypeFieldValueInvalid,
-		// 		Message: fmt.Sprintf("only a %s network source can be selected.", field.Child("domain", "devices", "networks").Index(0).Child("pod").String()),
-		// 		Field:   field.Child("domain", "devices", "networks").Index(0).Child("pod").String(),
-		// 	})
-		// }
 	}
 
 	causes = append(causes, validateDomainSpec(field.Child("domain"), &spec.Domain)...)
